Included act_as_list gem to reorder positions, added logic to determine position of new item

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <div class="field, d-none">
+  <div class="field">
     <%= form.label :position %>
     <%= form.number_field :position %>
   </div>
