--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,26 +1,26 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Tasks</h1>
+<h1 class="mb-5 pb-3">Tasks</h1>
 
-<table>
+<table class="mt-5 pt-3 table-hover table-borderless bg-white text-dark">
   <thead>
     <tr>
-      <th>Position</th>
-      <th>Title</th>
-      <th>Is done</th>
-      <th colspan="3"></th>
+      <th class="mr-3 pr-3">Position</th>
+      <th class="mx-3 px-3">Title</th>
+      <th class="mx-3 px-3">Is done</th>
+      <th colspan="3" class="mx-auto px-auto"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @tasks.each do |task| %>
       <tr>
-        <td><%= task.position %></td>
-        <td><%= task.title %></td>
-        <td><%= task.is_done %></td>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="ml-3 pl-3"><%= task.position %></td>
+        <td class="ml-5 pl-4"><%= task.title %></td>
+        <td class="ml-5 pl-4"><%= task.is_done %></td>
+        <td class="mx-auto px-auto"><%= link_to 'Show', task %></td>
+        <td class="mx-auto px-auto"><%= link_to 'Edit', edit_task_path(task) %></td>
+        <td class="mx-auto px-auto"><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
