--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,7 +2,16 @@
 
 <h1 class="mb-5 pb-3">Tasks</h1>
 
-<table class="mt-5 pt-3 table-hover table-borderless bg-white text-dark">
+
+
+
+<div id="tasks" class="list-group" data-url="<%= sort_tasks_path %>">
+  <% @tasks.each do |task| %>
+    <%= link_to task.title, task, class: "list-group-item", id: dom_id(task) %>
+  <% end %>
+</div>
+
+<!-- <table class="mt-5 pt-3 table-hover table-borderless bg-white text-dark">
   <thead>
     <tr>
       <th class="mr-3 pr-3">Position</th>
@@ -24,7 +33,7 @@
       </tr>
     <% end %>
   </tbody>
-</table>
+</table> -->
 
 <br>
 
