--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_with(model: task, local: true) do |form| %>
+<br>
+<%= form_with(model: task) do |form| %>
   <% if task.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(task.errors.count, "error") %> prohibited this task from being saved:</h2>
@@ -11,22 +12,14 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :position %>
-    <%= form.number_field :position %>
-  </div>
+  <%= form.hidden_field :position, value: 1 %>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
-
-  <div class="field">
-    <%= form.label :is_done %>
-    <%= form.check_box :is_done %>
+  <div class="form-group">
+    <%#= form.label :title %>
+    <%= form.text_field :title, class: 'form-control' %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
